[metadata]
name = gray-elf
description = Python logging formatter and handlers for Graylog Extended Log Format (GELF)
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/gray-elf
license = MIT

[options]
py_modules =
    gray_elf
setup_requires =
    setuptools_scm>=3.5.0

[options.extras_require]
test =
    pytest>=6.2.0
    pytest-asyncio>=0.14.0
    pytest-cov>=2.11.1

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native
filterwarnings = error

[coverage:run]
branch = True
source =
    gray_elf

[coverage:report]
show_missing = True

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
