[metadata]
name = gray-elf
description = Python logging formatter and handlers for Graylog Extended Log Format (GELF)
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/gray-elf
project_urls =
    repository = https://github.com/ods/gray-elf
    changelog = https://github.com/ods/gray-elf/blob/master/CHANGELOG.rst
license = MIT
keywords =
    graylog
    gelf
    logging
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Logging

[options]
py_modules =
    gray_elf
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2

[options.extras_require]
test =
    pytest >= 6.2.0
    pytest-cov >= 2.11.1

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native
filterwarnings = error

[coverage:run]
branch = True
source =
    gray_elf

[coverage:report]
show_missing = True

[mypy]
python_version = 3.10
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
